the ui is finished